# nouveau-reclock

./: .gitignore  README.md  de.z_ray.Nvreclock.desktop  de.z_ray.Nvreclock.json  de.z_ray.Nvreclock.metainfo.xml  meson.build
flatpak_build/: build.sh
nvreclock/: __init__.py  class_gpu.py  const.py  main_ui.py  meson.build  pci_ids.py  utils.py
nvreclock/data/icons/: meson.build
